add global styles, fonts, img

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="css/main.css">
 
 </head>
-<body>
-
+<body class="dark-mode">
 
   <script src="js/main.js"></script>
 </body>
