--- a/index.html
+++ b/index.html
@@ -22,13 +22,30 @@
         <span class="logo-link-wrapper">
           <span class="logo-link">
             <svg class="path-logo-img" width="18" height="17" viewBox="0 0 18 17" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5532 11.815C8.66857 11.815 5.51929 8.92783 5.51929 5.36821C5.51929 4.0253 5.96679 2.78158 6.73143 1.75C3.69036 2.69515 1.5 5.33122 1.5 8.43807C1.5 12.3385 4.94929 15.5 9.20357 15.5C12.5929 15.5 15.4696 13.4932 16.5 10.7045C15.375 11.4048 14.0161 11.815 12.5532 11.815Z" fill="currentcolor" stroke="#111517" stroke-width="1.25"/></svg>
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5532 11.815C8.66857 11.815 5.51929 8.92783 5.51929 5.36821C5.51929 4.0253 5.96679 2.78158 6.73143 1.75C3.69036 2.69515 1.5 5.33122 1.5 8.43807C1.5 12.3385 4.94929 15.5 9.20357 15.5C12.5929 15.5 15.4696 13.4932 16.5 10.7045C15.375 11.4048 14.0161 11.815 12.5532 11.815Z"stroke="currentColor" stroke-width="1.25" fill="currentcolor" /></svg>
           </span>
           <span class="logo-link-text">Dark Mode</span>
         </span>
       </button>
     </div>
   </header>
+
+  <!-- MAIN  -->
+  <main class="main-content">
+    <div class="container">
+      <form class="filters" action="https://echo.htmlacademy.ru" method="get">
+        <input class="input-search" type="search" name="search" placeholder="Search for a country…" aria-label="country name" required>
+        <select class="filters-region-select" name="region" aria-label="regions">
+          <option selected disabled>Filter by Region</option>
+          <option>Africa</option>
+          <option>America</option>
+          <option>Asia</option>
+          <option>Europe</option>
+          <option>Oceania</option>
+        </select>
+      </form>
+    </div>
+  </main>
   <script src="js/main.js"></script>
 </body>
 </html>
