add country page section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>project</title>
+  <title>countries</title>
 
   <!-- stylesheet  -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -57,7 +57,7 @@
               <img class="index-country-flag" src="img/germany.jpg" alt="germany flag" width="267" height="160" srcset="img/germany.jpg 1x, img/germany@2x.jpg 2x">
               <div class="index-country-info">
                 <h3 class="index-country-name">
-                  <a class="index-country-info-link" href="#">Germany</a>
+                  <a class="index-country-info-link" href="country.html">Germany</a>
                 </h3>
                 <dl class="index-countr-details">
                   <div class="index-country-details-item">
@@ -82,7 +82,7 @@
               <img class="index-country-flag" src="img/usa.jpg" alt="germany flag" width="267" height="160" srcset="img/usa.jpg 1x, img/usa@2x.jpg 2x">
               <div class="index-country-info">
                 <h3 class="index-country-name">
-                  <a class="index-country-info-link" href="#">United States of America</a>
+                  <a class="index-country-info-link" href="country.html">United States of America</a>
                 </h3>
                 <dl class="index-countr-details">
                   <div class="index-country-details-item">
@@ -107,7 +107,7 @@
               <img class="index-country-flag" src="img/brazil.jpg" alt="germany flag" width="267" height="160" srcset="img/brazil.jpg 1x, img/brazil@2x.jpg 2x">
               <div class="index-country-info">
                 <h3 class="index-country-name">
-                  <a class="index-country-info-link" href="#">Brazil</a>
+                  <a class="index-country-info-link" href="country.html">Brazil</a>
                 </h3>
                 <dl class="index-countr-details">
                   <div class="index-country-details-item">
@@ -132,7 +132,7 @@
               <img class="index-country-flag" src="img/Iceland.jpg" alt="germany flag" width="267" height="160" srcset="img/Iceland.jpg 1x, img/Iceland@2x.jpg 2x">
               <div class="index-country-info">
                 <h3 class="index-country-name">
-                  <a class="index-country-info-link" href="#">Iceland</a>
+                  <a class="index-country-info-link" href="country.html">Iceland</a>
                 </h3>
                 <dl class="index-countr-details">
                   <div class="index-country-details-item">
@@ -157,7 +157,7 @@
               <img class="index-country-flag" src="img/afghanistan.jpg" alt="germany flag" width="267" height="160" srcset="img/afghanistan.jpg 1x, img/afghanistan@2x.jpg 2x">
               <div class="index-country-info">
                 <h3 class="index-country-name">
-                  <a class="index-country-info-link" href="#">Afghanistan</a>
+                  <a class="index-country-info-link" href="country.html">Afghanistan</a>
                 </h3>
                 <dl class="index-countr-details">
                   <div class="index-country-details-item">
@@ -182,7 +182,7 @@
               <img class="index-country-flag" src="img/aland-Islands.jpg" alt="germany flag" width="267" height="160" srcset="img/aland-Islands.jpg 1x, img/aland-Islands@2x.jpg 2x">
               <div class="index-country-info">
                 <h3 class="index-country-name">
-                  <a class="index-country-info-link" href="#">Åland Islands</a>
+                  <a class="index-country-info-link" href="country.html">Åland Islands</a>
                 </h3>
                 <dl class="index-countr-details">
                   <div class="index-country-details-item">
@@ -207,7 +207,7 @@
               <img class="index-country-flag" src="img/albania.jpg" alt="germany flag" width="267" height="160" srcset="img/albania.jpg 1x, img/albania@2x.jpg 2x">
               <div class="index-country-info">
                 <h3 class="index-country-name">
-                  <a class="index-country-info-link" href="#">Albania</a>
+                  <a class="index-country-info-link" href="country.html">Albania</a>
                 </h3>
                 <dl class="index-countr-details">
                   <div class="index-country-details-item">
@@ -232,7 +232,7 @@
               <img class="index-country-flag" src="img/algeria.jpg" alt="germany flag" width="267" height="160" srcset="img/algeria.jpg 1x, img/algeria@2x.jpg 2x">
               <div class="index-country-info">
                 <h3 class="index-country-name">
-                  <a class="index-country-info-link" href="#">Algeria</a>
+                  <a class="index-country-info-link" href="country.html">Algeria</a>
                 </h3>
                 <dl class="index-countr-details">
                   <div class="index-country-details-item">
